# uniVR

./: .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  WORKSPACE  bitbucket-pipelines.yml  circle.yml  demo.sh  dlib
.github/workflows/: current.yml  legacy.yml
algorithms/: .gitignore  Makefile  compare.sh  gen_graphs.m
algorithms/_/: CMakeLists.txt  algo_camshift.cc  algo_detection_based_tracker.cc  algo_haar.cc  algo_haar_ocl.cc  algo_hog.cc  algo_surf_ocl.cc  detection_based_tracker.cc  main.cc
algorithms/_/include/: _.hh
algorithms/algo_basic_haar/: CMakeLists.txt  main.cc
algorithms/algo_camshift/: CMakeLists.txt  main.cc
algorithms/algo_detection_based_tracker/: CMakeLists.txt  main.cc  ocv3.cc
algorithms/algo_haar/: CMakeLists.txt  main.cc
algorithms/algo_haar_ocl/: CMakeLists.txt  main.cc
algorithms/algo_surf_ocl/: CMakeLists.txt  main.cc
algorithms/basic_haar/: CMakeLists.txt
data/shaders/glsl/: 4dBGDy.glsl  4sjXzG.glsl  4ssXW2.glsl  4tl3RM.glsl  Generators.glsl  Md2Xzm.glsl  MdS3zm.glsl  MdXGW2.glsl  MdjGRy.glsl  MsX3Rf.glsl  MsXXWH.glsl  Msf3Dj.glsl  Msf3z4.glsl  Msj3zD.glsl  MtX3Ws.glsl  MtfGR8.glsl  Volcanic.glsl  XdB3Dw.glsl  XdfGW4.glsl  XdfXDB.glsl  XsSGDy.glsl  XsSGzG.glsl  Xss3DS.glsl  edge glow.glsl  electron.glsl  ld2Gz3.glsl  ldl3DS.glsl  lsl3W2.glsl  lslSRf.glsl  pyroclastic explosion.glsl
data/shaders/glsl/public/: 4d23WG,julia___traps_1.glsl  4d2Xzc,flakes.glsl  4d33z4,my_first_shadertoy__learning_sdf.glsl  4d3GzS,peripheral_aliasing_demo.glsl  4d3SRr,simple_distortion_shader.glsl  4d3SWM,nebula___space.glsl  4d3SWl,another_mobius.glsl  4dBGR1,pixelizer_from_fr_minus_017.glsl  4dG3DV,yin_yang_spin_175_chars.glsl  4dG3RW,molecular_dynamics.glsl  4dG3WK,_lt__lt__lt_now_gt_you_lt_can_gt__gt__gt_____.glsl  4dGGz3,city_driving.glsl  4dGGzD,radial_repeat__179c_.glsl  4dGGzG,func_graph.glsl  4dGSDR,efficient_splat_.glsl  4dGSWR,game_of_life__240_chars_.glsl  4dK3R3,____.glsl  4dK3zD,musical_heart.glsl  4dKGR1,visual_hierarchy.glsl  4dKGRV,simplex_noise___maximum_zoom.glsl  4dKGWm,elephant.glsl  4dSGW1,grid_of_cylinders.glsl  4dSSWV,spitfire_pursuit.glsl  4dSXzR,_nv15_space_voyage.glsl  4dV3RG,trapped_balls.glsl  4dV3Ry,the_anomaly.glsl  4dVGRR,3d_paint.glsl  (+983 more)
dlib-19.0/dlib/: CMakeLists.txt  add_python_module  cmake
dlib-19.0/dlib/matlab/: cmake_mex_wrapper
dlib-19.1/: README.txt
dlib-19.1/dlib/: CMakeLists.txt  cmake
dlib-19.1/dlib/cmake_utils/: add_python_module
dlib-19.1/dlib/matlab/: cmake_mex_wrapper
dlib-19.1/examples/: CMakeLists.txt
dlib-v18.17/: CMakeLists.txt  add_python_module  cmake
dlib-v18.17/matlab/: cmake_mex_wrapper
dlib-v18.17/test/gui/: CMakeLists.txt
energy/: Makefile
energy/src/: main_base.cc  main_fromfile.cc
energy/test/: .gitignore  plotCSV_.m
examples/: CMakeLists.txt
examples/base/: CMakeLists.txt  base.cc
examples/boxes/: CMakeLists.txt  boxes.cc
examples/emjs_base/: CMakeLists.txt  emjs_base.cc
examples/fromfile/: CMakeLists.txt  fromfile.cc  run.sh
examples/sentiment/: CMakeLists.txt  ckplus.py  train_svm.py  utils.py
examples/shaders/: CMakeLists.txt  shaders.cc
examples/snowmen/: CMakeLists.txt  snowmen.cc
include/: nvr.hh
libnvr/: CMakeLists.txt  nvr.cc
libnvr/emscripten/: html5video.h
motion/include/: nvr_tools.hh
motion/src/: main.cc  nvr_tools.cc
nvr/: .gitignore  BUILD  CMakeLists.txt  Makefile  boxes.cc  boxes_cpu.pbtxt  boxes_gpu.pbtxt  bx.cc  bxs.cc  dlib  mediapipe_xpu.h  tut.cc
nvr/calculators/: BUILD  face_detection_to_nvr_calculator.cc  opencv_window_calculator.cc
nvr/data/: 4dB3Dw.glsl  4dBXWD.glsl  4dBXzw.glsl  4dS3RG.glsl  4dSXDd.glsl  4ds3WS.glsl  4s23WV.glsl  4slGWM.glsl  4ss3z4.glsl  4tlGDM.glsl  4tsGD7.glsl  Bacterium.glsl  Catacombs.glsl  Galaxy of Universes.glsl  Hand-drawn Sketch.glsl  Juliabulb.glsl  Md2Xzm.glsl  MdBGDK.glsl  MdjGRw.glsl  MetaHexaBalls.glsl  MsSSWV.glsl  MsXGR2.glsl  MsjSzz.glsl  MtlGWM.glsl  Seascape.glsl  The Inversion Machine.glsl  Timewarp.glsl  Topologica.glsl  XdlSDs.glsl  XlfGWl.glsl  XljGDz.glsl  XllGzN.glsl  Xls3D2.glsl  XlsGz4.glsl  XsXSWN.glsl  XtS3DD.glsl  XtfGzj.glsl  Xyptonjtroz.glsl  crystal beacon.glsl  ld2GRz.glsl  (+10 more)
nvr/data/shaders/: getshader.py
nvr/data/shaders/glsl/: 4dBXWD.glsl  4dsGD7.glsl  4ssSRX.glsl  Artificial.glsl  Bridge.glsl  Md23Wz.glsl  MdlXWr.glsl  MdsGz8.glsl  MljGzR.glsl  MsBGWm.glsl  MtBGRD.glsl  Reprojection.glsl  Xsf3zX.glsl  ldB3DK.glsl  ls2GDw.glsl  mouse_input_debug_demo.glsl  ngRay1.glsl  voxel_ca.glsl
nvr/data/shaders/glsl/public/: 01.glsl  02_metaballs_in_sphere.glsl  03_substraction.glsl  04.glsl  05.glsl  08_balls.glsl  10_cage.glsl  121chars.glsl  128_bit_4_color_sprites.glsl  12_bars.glsl  12_gears.glsl  1d_cubic_uniform_b_spline.glsl  1d_cubic_uniform_b_spline_ii.glsl  1d_quadratic_bezier_matrix_form.glsl  1d_quadratic_uniform_b_spline_ii.glsl  1d_radial_lightmap_test.glsl  2015_11_03.glsl  2015_12_03.glsl  2015_12_12.glsl  2016_01_02.glsl  2016_01_05.glsl  2d_blocky_dissolve.glsl  2d_cloth.glsl  2d_discrete_attractor_plotter.glsl  2d_fft_test.glsl  2d_movable_metaball.glsl  2d_mpass_mblur_4___meteor.glsl  2d_noise_contours.glsl  2d_parallax_starfield.glsl  2d_particle_fluid_test.glsl  2d_quadratic_bezier_ii.glsl  2d_rad_rep___particles_2__196c_.glsl  2d_radial_repeat___rosace_2_159c.glsl  2d_radial_repeat___rosace__199c_.glsl  2d_radial_repeat_particles_277c.glsl  2d_radial_texture__183c_.glsl  2d_sdf_toy.glsl  2d_short_pattern_1__152c_.glsl  2d_shuffle_2___127_chars__.glsl  2d_smoke.glsl  (+1835 more)
nvr/graphs/: boxes_cpu.pbtxt  boxes_gpu.pbtxt
nvr/include/: nvr.hh  nvr_tools.hh
nvr/lib/: emjs.cc  nvr.cc
nvr/lib/emscripten/: library_html5video.js
nvr/src/: main.cc  main_base.cc  main_boxes.cc  main_debug.cc  main_emjs_base.cc  main_emjs_boxes.cc  main_fromfile.cc  main_shaders.cc  main_snowmen.cc  nvr.cc  nvr_tools.cc
nvr/test/: bdd.md  gen_csv.sh  gen_graphs.m  plotCSV.m
stateoftheart/: CMakeLists.txt  Makefile  configure
stateoftheart/ext/gtest/: CMakeLists.txt
stateoftheart/include/: cpp_sorter.h
stateoftheart/src/: main.cc
(+5 files in other folders)
